<resources>
    <string name="app_name">ARM TIME</string>

    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="end">End</string>
    <string name="settings_button">Settings</string>

    <string name="time">Time</string>
    <string name="time2">Count from:</string>
    <string name="default_time">30</string>

    <string name="repetitions">Repetition</string>
    <string name="repetitions2">Times:</string>
    <string name="default_repetition">12</string>

    <string name="preference_file_key">Settings</string>

    <string name="random">Random period</string>
    <string name="voice">Voice</string>
    <string name="name">Name</string>
    <string name="sec">(sec)</string>
    <string name="time_minimum">Min (sec):</string>
    <string name="time_maximum">Max (sec):</string>
    <string name="time_constant">Constant time:</string>
    <string name="default_min_time">2</string>
    <string name="default_max_time">5</string>

</resources>