<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/for_main_back"
    tools:context=".MainActivity">



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="200dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/stop_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:background="@drawable/circle_shape"

        android:text="@string/start_button"
        android:textSize="40sp"
        android:textColor="@color/for_text"
        android:fontFamily="@font/italic_font"


        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stop_button"
        android:layout_width="100dp"
        android:layout_height="100dp"

        app:layout_constraintTop_toBottomOf="@+id/start_button"
        app:layout_constraintBottom_toTopOf="@id/settings_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:background="@drawable/circle_shape_red"
        android:visibility="gone"

        android:text="@string/stop_button"
        android:textSize="20sp"
        android:textColor="@color/for_text"
        android:fontFamily="@font/italic_font"

        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"

        android:background="@drawable/top_corners"

        android:text="@string/settings_button"
        android:textSize="30sp"
        android:textColor="@color/for_text"
        android:fontFamily="@font/italic_font"/>


</androidx.constraintlayout.widget.ConstraintLayout>
